--- a/The_seat/src/main/webapp/resources/css/storeReview.css
+++ b/The_seat/src/main/webapp/resources/css/storeReview.css
@@ -127,6 +127,11 @@ small {
     margin-left: 30px;
 }
 
+.user-review__body {
+	display:flex;
+	align-items: center;
+}
+
 .user-review__title {
     display: flex;
     justify-content: space-between;
