--- a/The_seat/src/main/webapp/resources/css/storeDetail.css
+++ b/The_seat/src/main/webapp/resources/css/storeDetail.css
@@ -266,3 +266,23 @@
   		transform: rotateX(-90deg);
 	}
 	
+.detail-container {
+	margin-top: 150px;
+	display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+	@media screen and (max-width:1024px) {
+		 .detail-container {
+			margin-top: 250px;
+		}
+	}
+	
+	@media screen and (max-width:767px) {
+		 .detail-container {
+			margin-top: 350px;
+		}
+	}
+	
