--- a/The_seat/src/main/webapp/resources/css/storeDetail.css
+++ b/The_seat/src/main/webapp/resources/css/storeDetail.css
@@ -85,9 +85,10 @@
 	}
 	
 	/************** 베스트 메뉴 보이는 이미지 css **************/
-	#bestMenu {
+	.banner_img {
 		display: flex;
-		justify-content: space-around;
+		justify-content: space-between;
+		margin: 10px 10px;
 	}
 	
 	/********* 클래스 하나에만 적용하는 투명 스크롤바 css ********/
@@ -274,15 +275,40 @@
 	    align-items: center;
 	}
 
-	@media screen and (max-width:1024px) {
-		 .detail-container {
-			margin-top: 250px;
-		}
+@media screen and (max-width:1024px) {
+	 .detail-container {
+		margin-top: 300px;
+	}
+	.row1 {
+		display: flex;
+	    flex-direction: column;
+	    justify-content: center;
+    	align-items: center;
+	}
+	#bestMenu {
+		display: flex;
+	    flex-direction: column;
+	    justify-content: center;
+    	align-items: center;
 	}
 	
-	@media screen and (max-width:767px) {
-		 .detail-container {
-			margin-top: 350px;
-		}
+}
+
+@media screen and (max-width:767px) {
+	 .detail-container {
+		margin-top: 350px;
 	}
+	.row1 {
+		display: flex;
+	    flex-direction: column;
+	    justify-content: center;
+    	align-items: center;
+	}
+	#bestMenu {
+		display: flex;
+	    flex-direction: column;
+	    justify-content: center;
+    	align-items: center;
+	}
+}
 	
